trunk/OldArchive/ec4ed071b65114b32cdec66752b75c8d-e50ba9fcf11a6b0c9e1992e63673f963/output
+ clang++ -std=c++11 -stdlib=libc++ -O2 -Wall -pedantic main.cpp
main.cpp:6:22: warning: result of comparison against a string literal is unspecified (use strncmp instead) [-Wstring-compare]
    (std::cout << a) < " ";
                     ^ ~~~
main.cpp:6:22: error: invalid operands to binary expression ('std::__1::basic_ostream<char>' and 'const char *')
    (std::cout << a) < " ";
    ~~~~~~~~~~~~~~~~ ^ ~~~
1 warning and 1 error generated.
